updated UI of calculator

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Online Calculator App</h1>
         </div>
         <div class = "display">
-            <div class = "output">
+            <div id = "output">
               0   
             </div>
             <div class = "buttons">
