--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
             <h1>Online Calculator App</h1>
         </div>
         <div class = "display">
-            <div id = "output">
-              0   
-            </div>
+            <div id = "output">0</div>
             <div class = "buttons">
                 <div class = "left">
                     <div class = "specials">
