--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
         <meta charset = "utf-8">
         <script src = "script.js" defer></script>
         <link rel = "stylesheet" href = style.css>
+        <link rel = "icon" href = "calculator_icon.png">
     </head>
     <body>
         <div class = "header">
             <h1>Online Calculator App</h1>
+            <p>...because who needs your phone's calculator when you can just use this site?</p>
         </div>
         <div class = "display">
             <div id = "output">0</div>
@@ -56,7 +58,7 @@
             </div>
         </div>
         <div class = "footer">
-
+            <div>Check out the GitHub repo at <a href = "https://github.com/jhuang38/calculator">https://github.com/jhuang38/calculator</a></div>
         </div>
     </body>
 </html>
